--- a/frontend/src/pages/basket-page/styles.module.css
+++ b/frontend/src/pages/basket-page/styles.module.css
@@ -213,3 +213,35 @@
     fill: white;
     box-sizing: content-box; /* чтобы padding не сжимал иконку */
 }
+
+
+.emptyState {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 80vh;
+  text-align: center;
+  color: #aaa;
+  background-color: #212121;
+}
+
+.emptyTitle {
+  font-size: 20px;
+  font-weight: bold;
+  margin-bottom: 10px;
+  color: white;
+  background-color: #212121;
+}
+
+.emptySubtitle {
+  font-size: 14px;
+  line-height: 1.4;
+  color: #fff;
+  background-color: #212121;
+}
+
+.emptyLink {
+  color: #009c70;
+  background-color: #212121;
+}
