--- a/frontend/src/features/products/ui/product-card.module.css
+++ b/frontend/src/features/products/ui/product-card.module.css
@@ -9,17 +9,51 @@
     background-color: #212121;
 }
 
-.card img {
+.imageWrapper {
+    width: 100%;
+    position: relative;
+    background-color: #212121;
+}
+
+.imageWrapper img {
+    background-color: #212121;
     max-width: 100%;
     border-radius: 12px;
     margin-bottom: 12px;
 }
 
-
-.card span {
-    margin-bottom: 6px;
+.tag {
+    position: absolute;
+    bottom: 20px;
+    left: 8px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 4px 8px;
+    border-radius: 8px;
+    font-size: 10px;
     color: #fff;
-    background-color: #212121;
+    background-color: transparent;
+    backdrop-filter: blur(4px);
+}
+
+.best {
+    background-color: #4e51ff;
+}
+
+.new {
+    background-color: #ff890b;
+}
+
+.hit {
+    background-color: #ff4e4e;
+}
+
+.tag svg {
+    width: 11px;
+    height: 11px;
+    margin-right: 6px;
+    fill: currentColor;
 }
 
 
@@ -28,6 +62,8 @@
     font-weight: normal;
     text-align: left;
     width: 100%;
+    margin-bottom: 6px;
+    background-color: #212121;
 }
 
 .price {
@@ -35,8 +71,9 @@
     font-weight: bold;
     text-align: left;
     width: 100%;
+    margin-bottom: 6px;
+    background-color: #212121;
 }
-
 
 .buyButton {
     background-color: #009c70;
