--- a/frontend/src/pages/payment-status-page/styles.module.css
+++ b/frontend/src/pages/payment-status-page/styles.module.css
@@ -1,10 +1,18 @@
+.page {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    background-color: #121212; /* или любой ваш фон */
+}
+
 .wrapper {
+    flex: 1;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    min-height: 100vh;
     text-align: center;
+    padding: 20px;
 }
 
 .title {
@@ -39,5 +47,28 @@
     font-size: 18px;
     font-weight: bold;
     color: #fff;
-    margin-top: 10px;
+    margin-top: 20px;
+}
+
+
+.mainButton {
+    background-color: #009c70;
+    color: white;
+    padding: 16px;
+    border: none;
+    border-radius: 12px;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 16px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    transition: background-color 0.3s ease;
+    text-align: center;
+    margin: 20px;
+    width: calc(100% - 40px); /* full width minus margin */
+    max-width: 400px;
+    align-self: center;
+}
+
+.mainButton:hover {
+    background-color: #007e5a;
 }
